# pi-scheduler

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  approved_skills.py  config.py  cron.py  cron_status.py  db.py  governance.py  main.py  pi_models.py  retention.py  run_users.py  runner.py  runtime_setup.py  work_window.py
app/static/: styles.css
app/templates/: audit.html  base.html  cron_preview.html  group_detail.html  group_form.html  group_run_detail.html  index.html  job_detail.html  job_form.html  logs.html  maintenance_logs.html  run_detail.html
deploy/: pi-scheduler-web.service  run-local.sh  setup-runtime-user.sh
docs/superpowers/plans/: 2026-07-04-agent-governance-v1.md  2026-07-04-approved-skills-catalog.md  2026-07-04-cron-status.md  2026-07-04-per-job-run-user.md  2026-07-04-runtime-user-automation.md
docs/superpowers/specs/: 2026-07-04-agent-governance-v1-design.md  2026-07-04-approved-skills-catalog-design.md  2026-07-04-cron-status-design.md  2026-07-04-per-job-run-user-design.md  2026-07-04-runtime-user-automation-design.md
tests/: test_core.py
